api completa, frontend empezado

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVIR AUTOMATICAMENTE</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<button id="btn">
-    Presioname
-</button>
+    <main class="principal">
+        <table class="reader">
+            <thead class="table_head">
+                <th>ID</th>
+                <th>NOMBRE</th>
+                <th>CELULAR</th>
+                <th>CORREO</th>
+            </thead>
+            <tbody class="table_body">
+                <tr>
+                    <td>1</td>
+                    <td>Eddy</td>
+                    <td>3205256777</td>
+                    <td>buenosaires141555@gmail.com</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Eddy</td>
+                    <td>3205256777</td>
+                    <td>buenosaires141555@gmail.com</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Eddy</td>
+                    <td>3205256777</td>
+                    <td>buenosaires141555@gmail.com</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
 <script src="js/main.js"></script>
 </body>
 </html>
